--- a/src/ARCTokenization/structural_ontologies/assay_metadata_structural_ontology.yml
+++ b/src/ARCTokenization/structural_ontologies/assay_metadata_structural_ontology.yml
@@ -31,6 +31,8 @@ def: ""
     synonym: "Measurement Type" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000002 ! ASSAY
+    relationship: follows ASSMSO:00000003 ! ASSAY METADATA
 
     [Term]
     id: ASSMSO:00000005
@@ -40,6 +42,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000002 ! ASSAY
+    relationship: follows ASSMSO:00000003 ! ASSAY METADATA
 
     [Term]
     id: ASSMSO:00000006
@@ -48,6 +52,8 @@ def: ""
     synonym: "Measurement Type Term Accession Number" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000004 ! Assay Measurement Type
+    relationship: follows ASSMSO:00000005 ! Measurement Type
 
     [Term]
     id: ASSMSO:00000007
@@ -57,6 +63,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000004 ! Assay Measurement Type
+    relationship: follows ASSMSO:00000005 ! Measurement Type
 
     [Term]
     id: ASSMSO:00000008
@@ -65,6 +73,8 @@ def: ""
     synonym: "Measurement Type Term Source REF" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000006 ! Measurement Type Term Accession Number
+    relationship: follows ASSMSO:00000007 ! Assay Measurement Type Term Accession Number
 
     [Term]
     id: ASSMSO:00000009
@@ -74,6 +84,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000006 ! Measurement Type Term Accession Number
+    relationship: follows ASSMSO:00000007 ! Assay Measurement Type Term Accession Number
 
     [Term]
     id: ASSMSO:00000010
@@ -83,6 +95,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000008 ! Measurement Type Term Source REF
+    relationship: follows ASSMSO:00000009 ! Assay Measurement Type Term Source REF
     
     [Term]
     id: ASSMSO:00000011
@@ -91,6 +105,8 @@ def: ""
     synonym: "Technology Type" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000008 ! Measurement Type Term Source REF
+    relationship: follows ASSMSO:00000009 ! Assay Measurement Type Term Source REF
     
     [Term]
     id: ASSMSO:00000012
@@ -100,6 +116,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000010 ! Technology Type
+    relationship: follows ASSMSO:00000011 ! Assay Technology Type
     
     [Term]
     id: ASSMSO:00000013
@@ -109,6 +127,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000010 ! Technology Type
+    relationship: follows ASSMSO:00000011 ! Assay Technology Type
     
     [Term]
     id: ASSMSO:00000014
@@ -118,6 +138,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000012 ! Technology Type Term Accession Number
+    relationship: follows ASSMSO:00000013 ! Assay Technology Type Term Accession Number
     
     [Term]
     id: ASSMSO:00000015
@@ -126,6 +148,8 @@ def: ""
     synonym: "Technology Type Term Source REF" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000012 ! Technology Type Term Accession Number
+    relationship: follows ASSMSO:00000013 ! Assay Technology Type Term Accession Number
     
     [Term]
     id: ASSMSO:00000016
@@ -135,6 +159,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000014 ! Technology Type Term Source REF
+    relationship: follows ASSMSO:00000015 ! Assay Technology Type Term Source REF
     
     [Term]
     id: ASSMSO:00000017
@@ -143,6 +169,8 @@ def: ""
     synonym: "Technology Platform" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000014 ! Technology Type Term Source REF
+    relationship: follows ASSMSO:00000015 ! Assay Technology Type Term Source REF
     
     [Term]
     id: ASSMSO:00000018
@@ -152,6 +180,8 @@ def: ""
     is_obsolete: true
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
+    relationship: follows ASSMSO:00000016 ! Technology Platform
+    relationship: follows ASSMSO:00000017 ! Assay Technology Platform
     
     [Term]
     id: ASSMSO:00000019
@@ -160,12 +190,16 @@ def: ""
     synonym: "File Name" EXACT []
     relationship: part_of ASSMSO:00000002 ! ASSAY
     relationship: part_of ASSMSO:00000003 ! ASSAY METADATA
-    
+    relationship: follows ASSMSO:00000016 ! Technology Platform
+    relationship: follows ASSMSO:00000017 ! Assay Technology Platform
+
   [Term]
   id: ASSMSO:00000020
   name: ASSAY PERFORMERS
   def: ""
   relationship: part_of ASSMSO:00000001 ! ASSAY Metadata
+  relationship: follows ASSMSO:00000018 ! File Name
+  relationship: follows ASSMSO:00000019 ! Assay File Name
 
     [Term]
     id: ASSMSO:00000021
@@ -173,6 +207,7 @@ def: ""
     def: ""
     synonym: "Last Name" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000020 ! ASSAY PERFORMERS
 
     [Term]
     id: ASSMSO:00000022
@@ -181,6 +216,7 @@ def: ""
     synonym: "Assay Performer Last Name" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000020 ! ASSAY PERFORMERS
 
     [Term]
     id: ASSMSO:00000023
@@ -188,6 +224,8 @@ def: ""
     def: ""
     synonym: "First Name" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000021 ! Assay Performer Last Name
+    relationship: follows ASSMSO:00000022 ! Last Name
 
     [Term]
     id: ASSMSO:00000024
@@ -196,13 +234,17 @@ def: ""
     synonym: "Assay Performer First Name" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000021 ! Assay Performer Last Name
+    relationship: follows ASSMSO:00000022 ! Last Name
+
     [Term]
     id: ASSMSO:00000025
     name: Assay Performer Mid Initials
     def: ""
     synonym: "Mid Initials" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000023 ! Assay Performer First Name
+    relationship: follows ASSMSO:00000024 ! First Name
     
     [Term]
     id: ASSMSO:00000026
@@ -211,6 +253,8 @@ def: ""
     synonym: "Assay Performer Mid Initials" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000023 ! Assay Performer First Name
+    relationship: follows ASSMSO:00000024 ! First Name
     
     [Term]
     id: ASSMSO:00000027
@@ -218,6 +262,8 @@ def: ""
     def: ""
     synonym: "Email" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000025 ! Assay Performer Mid Initials
+    relationship: follows ASSMSO:00000026 ! Mid Initials
     
     [Term]
     id: ASSMSO:00000028
@@ -226,13 +272,17 @@ def: ""
     synonym: "Assay Performer Email" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000025 ! Assay Performer Mid Initials
+    relationship: follows ASSMSO:00000026 ! Mid Initials
+
     [Term]
     id: ASSMSO:00000029
     name: Assay Performer Phone
     def: ""
     synonym: "Phone" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000027 ! Assay Performer Email
+    relationship: follows ASSMSO:00000028 ! Email
     
     [Term]
     id: ASSMSO:00000030
@@ -241,13 +291,17 @@ def: ""
     synonym: "Assay Performer Phone" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000027 ! Assay Performer Email
+    relationship: follows ASSMSO:00000028 ! Email
+
     [Term]
     id: ASSMSO:00000031
     name: Assay Performer Fax
     def: ""
     synonym: "Fax" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000029 ! Assay Performer Phone
+    relationship: follows ASSMSO:00000030 ! Phone
     
     [Term]
     id: ASSMSO:00000032
@@ -256,13 +310,17 @@ def: ""
     synonym: "Assay Performer Fax" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000029 ! Assay Performer Phone
+    relationship: follows ASSMSO:00000030 ! Phone
+
     [Term]
     id: ASSMSO:00000033
     name: Assay Performer Address
     def: ""
     synonym: "Address" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000031 ! Assay Performer Fax
+    relationship: follows ASSMSO:00000032 ! Fax
     
     [Term]
     id: ASSMSO:00000034
@@ -271,13 +329,17 @@ def: ""
     synonym: "Assay Performer Address" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000031 ! Assay Performer Fax
+    relationship: follows ASSMSO:00000032 ! Fax
+
     [Term]
     id: ASSMSO:00000035
     name: Assay Performer Affiliation
     def: ""
     synonym: "Affiliation" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000033 ! Assay Performer Address
+    relationship: follows ASSMSO:00000034 ! Address
     
     [Term]
     id: ASSMSO:00000036
@@ -286,13 +348,17 @@ def: ""
     synonym: "Assay Performer Affiliation" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000033 ! Assay Performer Address
+    relationship: follows ASSMSO:00000034 ! Address
+
     [Term]
     id: ASSMSO:00000037
     name: Assay Performer Roles
     def: ""
     synonym: "Roles" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000035 ! Assay Performer Affiliation
+    relationship: follows ASSMSO:00000036 ! Affiliation
     
     [Term]
     id: ASSMSO:00000038
@@ -301,13 +367,17 @@ def: ""
     synonym: "Assay Performer Roles" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000035 ! Assay Performer Affiliation
+    relationship: follows ASSMSO:00000036 ! Affiliation
+
     [Term]
     id: ASSMSO:00000039
     name: Assay Performer Roles Term Accession Number
     def: ""
     synonym: "Roles Term Accession Number" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000037 ! Assay Performer Roles
+    relationship: follows ASSMSO:00000038 ! Roles
     
     [Term]
     id: ASSMSO:00000040
@@ -316,13 +386,17 @@ def: ""
     synonym: "Assay Performer Roles Term Accession Number" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000037 ! Assay Performer Roles
+    relationship: follows ASSMSO:00000038 ! Roles
+
     [Term]
     id: ASSMSO:00000041
     name: Assay Performer Roles Term Source REF
     def: ""
     synonym: "Roles Term Source REF" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
+    relationship: follows ASSMSO:00000039 ! Assay Performer Roles Term Accession Number
+    relationship: follows ASSMSO:00000040 ! Roles Term Accession Number
     
     [Term]
     id: ASSMSO:00000042
@@ -331,4 +405,5 @@ def: ""
     synonym: "Assay Performer Roles Term Source REF" EXACT []
     is_obsolete: true
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    
+    relationship: follows ASSMSO:00000039 ! Assay Performer Roles Term Accession Number
+    relationship: follows ASSMSO:00000040 ! Roles Term Accession Number
