--- a/src/ARCTokenization/structural_ontologies/assay_metadata_structural_ontology.yml
+++ b/src/ARCTokenization/structural_ontologies/assay_metadata_structural_ontology.yml
@@ -202,7 +202,7 @@ def: ""
 
     [Term]
     id: ASSMSO:00000021
-    name: Assay Performer Last Name
+    name: Assay Person Last Name
     def: ""
     synonym: "Last Name" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
@@ -219,11 +219,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000023
-    name: Assay Performer First Name
+    name: Assay Person First Name
     def: ""
     synonym: "First Name" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000021 ! Assay Performer Last Name
+    relationship: follows ASSMSO:00000021 ! Assay Person Last Name
     relationship: follows ASSMSO:00000022 ! Last Name
 
     [Term]
@@ -238,11 +238,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000025
-    name: Assay Performer Mid Initials
+    name: Assay Person Mid Initials
     def: ""
     synonym: "Mid Initials" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000023 ! Assay Performer First Name
+    relationship: follows ASSMSO:00000023 ! Assay Person First Name
     relationship: follows ASSMSO:00000024 ! First Name
     
     [Term]
@@ -257,11 +257,11 @@ def: ""
     
     [Term]
     id: ASSMSO:00000027
-    name: Assay Performer Email
+    name: Assay Person Email
     def: ""
     synonym: "Email" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000025 ! Assay Performer Mid Initials
+    relationship: follows ASSMSO:00000025 ! Assay Person Mid Initials
     relationship: follows ASSMSO:00000026 ! Mid Initials
     
     [Term]
@@ -276,11 +276,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000029
-    name: Assay Performer Phone
+    name: Assay Person Phone
     def: ""
     synonym: "Phone" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000027 ! Assay Performer Email
+    relationship: follows ASSMSO:00000027 ! Assay Person Email
     relationship: follows ASSMSO:00000028 ! Email
     
     [Term]
@@ -295,11 +295,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000031
-    name: Assay Performer Fax
+    name: Assay Person Fax
     def: ""
     synonym: "Fax" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000029 ! Assay Performer Phone
+    relationship: follows ASSMSO:00000029 ! Assay Person Phone
     relationship: follows ASSMSO:00000030 ! Phone
     
     [Term]
@@ -314,11 +314,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000033
-    name: Assay Performer Address
+    name: Assay Person Address
     def: ""
     synonym: "Address" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000031 ! Assay Performer Fax
+    relationship: follows ASSMSO:00000031 ! Assay Person Fax
     relationship: follows ASSMSO:00000032 ! Fax
     
     [Term]
@@ -333,11 +333,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000035
-    name: Assay Performer Affiliation
+    name: Assay Person Affiliation
     def: ""
     synonym: "Affiliation" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000033 ! Assay Performer Address
+    relationship: follows ASSMSO:00000033 ! Assay Person Address
     relationship: follows ASSMSO:00000034 ! Address
     
     [Term]
@@ -352,11 +352,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000037
-    name: Assay Performer Roles
+    name: Assay Person Roles
     def: ""
     synonym: "Roles" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000035 ! Assay Performer Affiliation
+    relationship: follows ASSMSO:00000035 ! Assay Person Affiliation
     relationship: follows ASSMSO:00000036 ! Affiliation
     
     [Term]
@@ -371,11 +371,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000039
-    name: Assay Performer Roles Term Accession Number
+    name: Assay Person Roles Term Accession Number
     def: ""
     synonym: "Roles Term Accession Number" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000037 ! Assay Performer Roles
+    relationship: follows ASSMSO:00000037 ! Assay Person Roles
     relationship: follows ASSMSO:00000038 ! Roles
     
     [Term]
@@ -390,11 +390,11 @@ def: ""
 
     [Term]
     id: ASSMSO:00000041
-    name: Assay Performer Roles Term Source REF
+    name: Assay Person Roles Term Source REF
     def: ""
     synonym: "Roles Term Source REF" EXACT []
     relationship: part_of ASSMSO:00000020 ! ASSAY PERFORMERS
-    relationship: follows ASSMSO:00000039 ! Assay Performer Roles Term Accession Number
+    relationship: follows ASSMSO:00000039 ! Assay Person Roles Term Accession Number
     relationship: follows ASSMSO:00000040 ! Roles Term Accession Number
     
     [Term]
